# cc-usage-widget

./: README.md  cc-usage-widget.desktop  index.html  package-lock.json  package.json
.github/workflows/: release.yml
gnome-extension/: extension.js  metadata.json  stylesheet.css
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/appimage-hooks/: linuxdeploy-plugin-gtk.sh  webkit-workaround.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  config.rs  dbus_service.rs  lib.rs  main.rs  usage.rs
