[package]
name = "cc-usage-widget"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cc_usage_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
notify = "7"
tokio = { version = "1", features = ["sync", "rt", "time"] }
image = "0.25"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
futures-util = "0.3"

